--- a/styles.css
+++ b/styles.css
@@ -22,20 +22,24 @@ body, html {
     position: relative;
 }
 
-.title-image {
-    width: 80%;
+.image-wrapper {
+    position: relative;
+    width: 100%;
     max-width: 600px;
     margin-bottom: 40px; /* Adjust margin to move buttons lower */
-    animation: titleSlideIn 1s ease-out, bounce 2s infinite;
+}
+
+.title-image {
+    width: 100%;
+    position: absolute;
+    top: 0;
+    left: 50%;
+    transform: translateX(-50%);
     transition: opacity 0.5s ease-in-out;
 }
 
 .hidden {
     opacity: 0;
-    position: absolute;
-    top: 0;
-    left: 50%;
-    transform: translateX(-50%);
     transition: opacity 0.5s ease-in-out;
 }
 
