--- a/styles.css
+++ b/styles.css
@@ -26,18 +26,23 @@ body, html {
     position: relative;
     width: 80%;
     max-width: 600px;
-    margin-bottom: 20px; /* Adjust margin to move buttons lower */
+    margin-bottom: 20px;
 }
 
 .title-image {
     width: 100%;
-    max-width: 600px;
     height: auto;
+    position: absolute;
+    top: 0;
+    left: 0;
     transition: opacity 0.5s ease-in-out;
 }
 
 .hidden {
     opacity: 0;
+    position: absolute;
+    top: 0;
+    left: 0;
     transition: opacity 0.5s ease-in-out;
 }
 
@@ -66,15 +71,15 @@ body, html {
 }
 
 @media (max-width: 768px) {
-    .title-image {
+    .image-wrapper {
         width: 90%;
     }
-    
+
     .button {
         padding: 10px 20px;
         font-size: 14px;
     }
-    
+
     .button-container {
         margin-top: 20px;
     }
