--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@ body, html {
     background-size: cover;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
     animation: backgroundFade 3s ease-in-out;
 }
@@ -26,24 +26,18 @@ body, html {
     position: relative;
     width: 80%;
     max-width: 600px;
-    margin-bottom: 50px; /* Increased margin to move buttons lower */
+    margin-top: 50px;
 }
 
 .title-image {
     width: 100%;
     max-width: 600px;
     height: auto;
-    position: absolute;
-    top: 0;
-    left: 0;
     transition: opacity 0.5s ease-in-out;
 }
 
 .hidden {
     opacity: 0;
-    position: absolute;
-    top: 0;
-    left: 0;
     transition: opacity 0.5s ease-in-out;
 }
 
@@ -51,7 +45,7 @@ body, html {
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
-    margin-top: 100px; /* Increased margin-top to ensure buttons are not overlapped */
+    margin-bottom: 50px;
 }
 
 .button {
@@ -89,11 +83,6 @@ body, html {
 @keyframes fadeIn {
     from { opacity: 0; }
     to { opacity: 1; }
-}
-
-@keyframes titleSlideIn {
-    from { transform: translateY(-50px); opacity: 0; }
-    to { transform: translateY(0); opacity: 1; }
 }
 
 @keyframes buttonFadeIn {
