--- a/styles.css
+++ b/styles.css
@@ -15,11 +15,10 @@ body, html {
 }
 
 .container {
-    text-align: center;
-    background-color: rgba(0, 0, 0, 0.0);
-    padding: 30px;
-    border-radius: 15px;
-    animation: fadeIn 2s ease-in-out;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
 }
 
 .image-wrapper {
@@ -33,12 +32,14 @@ body, html {
     width: 100%;
     max-width: 600px;
     height: auto;
+    position: absolute;
+    top: 0;
+    left: 0;
     transition: opacity 0.5s ease-in-out;
 }
 
 .hidden {
     opacity: 0;
-    transition: opacity 0.5s ease-in-out;
 }
 
 .button-container {
@@ -46,6 +47,7 @@ body, html {
     justify-content: center;
     flex-wrap: wrap;
     margin-bottom: 50px;
+    margin-top: auto;
 }
 
 .button {
