--- a/styles.css
+++ b/styles.css
@@ -45,8 +45,8 @@ body, html {
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
-    margin-top: 100px; /* Ensure buttons are below the title */
     margin-bottom: 50px;
+    margin-top: 400px; /* Increased margin-top to move buttons lower */
 }
 
 .button {
